--- a/extras/Cargo.toml
+++ b/extras/Cargo.toml
@@ -17,6 +17,6 @@ fil_actor_init = "7.1.1"
 fil_actor_multisig = "7.1.1"
 fil_actor_paych = "7.1.1"
 
-fvm_shared = "0.2.2"
-cid = "0.8.3"
+fvm_shared = "=0.2.2"
+cid = "0.8.4"
 base64 = "0.13.0"
