--- a/signer-npm/Cargo.toml
+++ b/signer-npm/Cargo.toml
@@ -36,6 +36,9 @@ subtle = "=2.3.0"
 syn = "1.0.85"
 toml = "=0.5.7"
 
+fvm_shared = "0.6.0"
+fvm_ipld_encoding = "0.1.0"
+
 getrandom = { version = "0.1.14", features = ["wasm-bindgen"] }
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
