--- a/extras/Cargo.toml
+++ b/extras/Cargo.toml
@@ -12,10 +12,10 @@ serde = { version = "1.0.136", features = ["derive"] }
 serde_json = "1.0"
 serde_alias = "0.0.2"
 
-fil_actor_cron = { version = "7.2.0", git = "https://github.com/filecoin-project/builtin-actors", branch = "release/v7" }
-fil_actor_init = { version = "7.2.0", git = "https://github.com/filecoin-project/builtin-actors", branch = "release/v7" }
-fil_actor_multisig = { version = "7.2.0", git = "https://github.com/filecoin-project/builtin-actors", branch = "release/v7" }
-fil_actor_paych = { version = "7.2.0", git = "https://github.com/filecoin-project/builtin-actors", branch = "release/v7" }
+fil_actor_cron = "7.2.0"
+fil_actor_init = "7.2.0"
+fil_actor_multisig = "7.2.0"
+fil_actor_paych = "7.2.0"
 
 fvm_shared = "0.6.0"
 cid = "=0.8.3"
