--- a/extras/Cargo.toml
+++ b/extras/Cargo.toml
@@ -16,6 +16,7 @@ fil_actor_cron = "7.2.0"
 fil_actor_init = "7.2.0"
 fil_actor_multisig = "7.2.0"
 fil_actor_paych = "7.2.0"
+fil_actor_miner = "7.2.0"
 
 fvm_shared = "0.6.0"
 cid = "=0.8.3"
