--- a/signer/Cargo.toml
+++ b/signer/Cargo.toml
@@ -45,7 +45,7 @@ fil_actor_paych = "7.2.0"
 fil_actor_miner = "7.2.0"
 
 fvm_shared = "0.6.0"
-fvm_ipld_encoding = "=0.1.0"
+fvm_ipld_encoding = "0.1.0"
 cid = "=0.8.3"
 
 num-traits = "0.2"
