--- a/extras/Cargo.toml
+++ b/extras/Cargo.toml
@@ -18,7 +18,7 @@ fil_actor_multisig = "7.2.0"
 fil_actor_paych = "7.2.0"
 fil_actor_miner = "7.2.0"
 
-fvm_shared = "0.6.0"
+fvm_shared = "=0.6.0"
 cid = "=0.8.3"
 base64 = "0.13.0"
 
