fix exporting FilecoinRPC

--- a/signer-npm/Makefile
+++ b/signer-npm/Makefile
@@ -2,3 +2,4 @@ build:
 	cp package-signer.json pkg/package.json
 	cp package-signer-wasm-browser.json pkg/browser/package.json
 	cp -r js pkg/
+	cp -r rpc pkg/
