--- a/signer-npm/Cargo.toml
+++ b/signer-npm/Cargo.toml
@@ -29,7 +29,7 @@ const_fn = "=0.4.3"
 itoa = "=0.4.6"
 parking_lot_core = "=0.8.0"
 pin-project = "1.0.11"
-pin-project-internal = "=1.0.2"
+pin-project-internal = "1.0.11"
 quote = "1.0.15"
 smallvec = "=1.6.1"
 subtle = "=2.3.0"
