--- a/examples/ffi/react_native/package.json
+++ b/examples/ffi/react_native/package.json
@@ -7,22 +7,52 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "postinstall": "rn-nodeify --install fs,dgram,process,path,console,crypto --hack"
   },
   "dependencies": {
+    "@peculiar/webcrypto": "^1.4.0",
     "@zondax/filecoin-signing-tools": "^1.0.4",
+    "assert": "^2.0.0",
+    "buffer": "^6.0.3",
+    "console-browserify": "^1.2.0",
+    "events": "^3.3.0",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
+    "fastestsmallesttextencoderdecoder": "^1.0.22",
+    "node-biginteger": "^0.0.10",
+    "path-browserify": "^0.0.0",
+    "process": "^0.11.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-web": "0.17.7"
+    "react-native-crypto": "^2.2.0",
+    "react-native-level-fs": "^3.0.1",
+    "react-native-randombytes": "^3.6.1",
+    "react-native-udp": "^2.7.0",
+    "react-native-web": "0.17.7",
+    "stream": "^0.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.66.13",
+    "rn-nodeify": "^10.3.0",
     "typescript": "~4.3.5"
   },
-  "private": true
+  "private": true,
+  "react-native": {
+    "console": "console-browserify",
+    "path": "path-browserify",
+    "fs": "react-native-level-fs",
+    "dgram": "react-native-udp",
+    "crypto": "react-native-crypto"
+  },
+  "browser": {
+    "console": "console-browserify",
+    "path": "path-browserify",
+    "fs": "react-native-level-fs",
+    "dgram": "react-native-udp",
+    "crypto": "react-native-crypto"
+  }
 }
