--- a/signer-npm/js/package.json
+++ b/signer-npm/js/package.json
@@ -7,6 +7,7 @@
   "author": "Zondax <info@zondax.ch>",
   "license": "Apache-2.0",
   "dependencies": {
+    "@chainsafe/bls": "^7.1.1",
     "@ipld/dag-cbor": "^7.0.2",
     "axios": "^0.27.2",
     "base32-decode": "^1.0.0",
