--- a/examples/ffi/flutter_app/pubspec.yaml
+++ b/examples/ffi/flutter_app/pubspec.yaml
@@ -30,6 +30,13 @@ dependencies:
   flutter:
     sdk: flutter
 
+  filecoin:
+    # When depending on this package from a real application you should use:
+    #   filecoin: ^x.y.z
+    # See https://dart.dev/tools/pub/dependencies#version-constraints
+    # The example app is bundled with the plugin so we use a path dependency on
+    # the parent direct
+    path: ../filecoin
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
