--- a/signer/Cargo.toml
+++ b/signer/Cargo.toml
@@ -31,7 +31,7 @@ sha2 = "0.9.2"
 log = "0.4.11"
 env_logger = "0.9.0"
 
-arbitrary = { optional = true, features = ["derive"], version = "1" }
+arbitrary = { optional = true, features = ["derive"], version = "=1.1.3" }
 ffi-support = { optional = true, version = "0.4" }
 
 tiny-bip39 = "0.8.0"
