--- a/signer-npm/js/package.json
+++ b/signer-npm/js/package.json
@@ -6,6 +6,7 @@
     "lint": "eslint src/**",
     "build": "tsc"
   },
+  "type": "module",
   "author": "Zondax <info@zondax.ch>",
   "license": "Apache-2.0",
   "dependencies": {
