--- a/signer-npm/rpc/package.json
+++ b/signer-npm/rpc/package.json
@@ -14,6 +14,7 @@
     "extends": "airbnb-base"
   },
   "dependencies": {
-    "axios": "^0.27.2"
+    "axios": "^0.27.2",
+    "eslint": "^8.25.0"
   }
 }
