--- a/signer-npm/rpc/package.json
+++ b/signer-npm/rpc/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
-    "eslint": "^8.25.0"
+    "eslint": "^8.25.0",
+    "typescript": "^4.8.4"
   }
 }
