--- a/signer-npm/js/package.json
+++ b/signer-npm/js/package.json
@@ -1,30 +1,36 @@
 {
   "name": "js",
-  "main": "src/index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.ts",
   "scripts": {
-    "lint": "eslint src/**"
+    "lint": "eslint src/**",
+    "build": "tsc"
   },
+  "type": "module",
   "author": "Zondax <info@zondax.ch>",
   "license": "Apache-2.0",
   "dependencies": {
     "@ipld/dag-cbor": "^7.0.3",
     "axios": "^1.1.2",
     "base32-decode": "^1.0.0",
-    "base32-encode": "1.2.0",
+    "base32-encode": "^2.0.0",
     "bip32": "2.0.6",
     "bip39": "^3.0.4",
     "blakejs": "^1.2.1",
     "bn.js": "^5.2.1",
-    "leb128": "0.0.5",
+    "leb128": "^0.0.5",
     "secp256k1": "^4.0.3"
   },
   "devDependencies": {
+    "@types/bn.js": "^5.1.1",
+    "@types/secp256k1": "^4.0.3",
     "eslint": "^8.25.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
     "mocha": "^10.0.0",
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "typescript": "^4.8.4"
   },
   "eslintConfig": {
     "extends": "airbnb-base"
