--- a/examples/wasm_node/package.json
+++ b/examples/wasm_node/package.json
@@ -25,7 +25,8 @@
   "dependencies": {
     "axios": "^1.1.2",
     "cids": "^1.1.9",
-    "esm": "^3.2.25"
+    "esm": "^3.2.25",
+    "tiny-secp256k1": "^2.2.1"
   },
   "devDependencies": {
     "bip32": "^3.1.0",
