--- a/signer-npm/js/package.json
+++ b/signer-npm/js/package.json
@@ -14,12 +14,13 @@
     "axios": "^1.1.2",
     "base32-decode": "^1.0.0",
     "base32-encode": "^2.0.0",
-    "bip32": "3.1.0",
+    "bip32": "^3.1.0",
     "bip39": "^3.0.4",
     "blakejs": "^1.2.1",
     "bn.js": "^5.2.1",
     "leb128": "^0.0.5",
-    "secp256k1": "^4.0.3"
+    "secp256k1": "^4.0.3",
+    "tiny-secp256k1": "^2.2.1"
   },
   "devDependencies": {
     "@types/bn.js": "^5.1.1",
