--- a/signer/Cargo.toml
+++ b/signer/Cargo.toml
@@ -32,6 +32,8 @@ log = "0.4.11"
 env_logger = "0.9.0"
 
 arbitrary = { optional = true, features = ["derive"], version = "=1.1.3" }
+derive_arbitrary = { version = "=1.1.6"}
+
 ffi-support = { optional = true, version = "0.4" }
 
 tiny-bip39 = "0.8.0"
