feat: refactor package structure
Remove redundant package.json files and unify everything in one file. In this way, we avoid dependencies redundancy and bad references to old package. 

We were testing code with one file, and publishing the package with another one.

--- a/signer-npm/Makefile
+++ b/signer-npm/Makefile
@@ -1,5 +1,4 @@
 build:
-	cp package-signer.json pkg/package.json
-	cp package-signer-wasm-browser.json pkg/browser/package.json
+	cp package.json pkg/package.json
 	cp -r js pkg/
 	cp -r rpc pkg/
