--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -68,7 +68,7 @@ jobs:
           path: |
             ~/.cache/sccache
           key: ${{ runner.os }}-${{ github.run_id }}-${{ needs.configure.outputs.datetime }}
-      - run: apt-get update -y && apt-get install -y libusb-1.0.0 libudev-dev
+      - run: sudo apt-get update -y && sudo apt-get install -y libusb-1.0.0 libudev-dev
       - name: rust unit tests --all-features
         env:
           LOTUS_SECRET_URL: ${{ secrets.LOTUS_SECRET_URL }}
@@ -100,7 +100,7 @@ jobs:
           key: ${{ runner.os }}-${{ github.run_id }}-${{ needs.configure.outputs.datetime }}
       - name: External dependencies
         run: |
-          apt update && apt-get install -y clang default-jdk g++ gcc gnustep gnustep-devel gobjc golang libicu-dev libtinfo5 valgrind zip
+          sudo apt update && sudo apt-get install -y clang default-jdk g++ gcc gnustep gnustep-devel gobjc golang libicu-dev libtinfo5 valgrind zip
       - name: Cbindgen
         run: |
           cd signer-ffi
@@ -146,7 +146,7 @@ jobs:
           path: |
             ~/.cache/sccache
           key: ${{ runner.os }}-${{ github.run_id }}-${{ needs.configure.outputs.datetime }}
-      - run: apt-get update && apt-get install -y firefox-esr libnss3
+      - run: sudo apt-get update && sudo apt-get install -y firefox-esr libnss3
       - run: npm install -g yalc
       - run: make install_wasmpack SILENT=true
       - run: |
