--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,5 @@ examples/wasm_browser/yarn.lock
 examples/private_keys_base64.txt
 test_vectors/NOTES.md
 examples/wasm_browser/yarn-error.log
+**/.yalc
+**/yalc.lock
