--- a/examples/wasm_browser/package.json
+++ b/examples/wasm_browser/package.json
@@ -21,7 +21,7 @@
     "filecoin"
   ],
   "dependencies": {
-    "@zondax/filecoin-signing-tools": "^2"
+    "@zondax/filecoin-signing-tools": "file:.yalc/@zondax/filecoin-signing-tools"
   },
   "devDependencies": {
     "copy-webpack-plugin": "^11.0.0",
