upgrade deps to have support for f4 address (#896)

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -16,21 +16,25 @@ jobs:
 
   build:
     needs: [ configure ]
-    container:
-      image: zondax/rust-ci:latest
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
         with:
           submodules: true
+      - name: Install latest stable
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          override: true
+          components: rustfmt, clippy
       - name: Restore/Save sscache
         uses: actions/cache@v2
         with:
           path: |
             ~/.cache/sccache
           key: ${{ runner.os }}-${{ github.run_id }}-${{ needs.configure.outputs.datetime }}
-      - run: apt-get update -y && apt-get install -y libusb-1.0.0 libudev-dev
+      - run: sudo apt-get update -y && sudo apt-get install -y libusb-1.0.0 libudev-dev
       - name: rustfmt
         run: |
           cargo fmt --version
@@ -48,20 +52,23 @@ jobs:
   tests_rust:
     needs: [ configure, build ]
     runs-on: ubuntu-latest
-    container:
-      image: zondax/rust-ci:latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
         with:
           submodules: true
+      - name: Install latest stable
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          override: true
       - name: Restore/Save sscache
         uses: actions/cache@v2
         with:
           path: |
             ~/.cache/sccache
           key: ${{ runner.os }}-${{ github.run_id }}-${{ needs.configure.outputs.datetime }}
-      - run: apt-get update -y && apt-get install -y libusb-1.0.0 libudev-dev
+      - run: sudo apt-get update -y && sudo apt-get install -y libusb-1.0.0 libudev-dev
       - name: rust unit tests --all-features
         env:
           LOTUS_SECRET_URL: ${{ secrets.LOTUS_SECRET_URL }}
@@ -75,13 +82,16 @@ jobs:
   tests_ffi:
     needs: [ configure, build ]
     runs-on: ubuntu-latest
-    container:
-      image: zondax/rust-ci:latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
         with:
           submodules: true
+      - name: Install latest nightly
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: nightly
+          override: true
       - name: Restore/Save sscache
         uses: actions/cache@v2
         with:
@@ -90,7 +100,7 @@ jobs:
           key: ${{ runner.os }}-${{ github.run_id }}-${{ needs.configure.outputs.datetime }}
       - name: External dependencies
         run: |
-          apt update && apt-get install -y clang default-jdk g++ gcc gnustep gnustep-devel gobjc golang libicu-dev libtinfo5 valgrind zip
+          sudo apt update && sudo apt-get install -y clang default-jdk g++ gcc gnustep gnustep-devel gobjc golang libicu-dev libtinfo5 valgrind zip
       - name: Cbindgen
         run: |
           cd signer-ffi
@@ -119,13 +129,16 @@ jobs:
   tests_npm:
     needs: [ configure, build ]
     runs-on: ubuntu-latest
-    container:
-      image: zondax/rust-ci:latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
         with:
           submodules: true
+      - name: Install latest stable
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          override: true
       - run: cargo --version
       - name: Restore/Save sscache
         uses: actions/cache@v2
@@ -133,7 +146,9 @@ jobs:
           path: |
             ~/.cache/sccache
           key: ${{ runner.os }}-${{ github.run_id }}-${{ needs.configure.outputs.datetime }}
-      - run: apt-get update && apt-get install -y firefox-esr libnss3
+      - run: |
+        sudo add-apt-repository ppa:mozillateam/ppa
+        sudo apt-get update && sudo apt-get install -y firefox-esr libnss3
       - run: npm install -g yalc
       - run: make install_wasmpack SILENT=true
       - run: |
@@ -146,13 +161,16 @@ jobs:
   devnet:
     needs: [ configure, build ]
     runs-on: ubuntu-latest
-    container:
-      image: zondax/rust-ci:latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
         with:
           submodules: true
+      - name: Install latest stable
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          override: true
       - name: Restore/Save sscache
         uses: actions/cache@v2
         with:
