--- a/examples/wasm_browser/package.json
+++ b/examples/wasm_browser/package.json
@@ -20,9 +20,7 @@
     "rust",
     "filecoin"
   ],
-  "dependencies": {
-    "@zondax/filecoin-signing-tools": "^2"
-  },
+  "dependencies": {},
   "devDependencies": {
     "copy-webpack-plugin": "^11.0.0",
     "webpack": "^5.69.1",
