--- a/signer-npm/Cargo.toml
+++ b/signer-npm/Cargo.toml
@@ -36,10 +36,10 @@ subtle = "=2.3.0"
 syn = "1.0.85"
 toml = "=0.5.7"
 
-fvm_shared = "2.0.0"
-fvm_ipld_encoding = "0.2.3"
+fvm_shared = "3.0.0-alpha.20"
+fvm_ipld_encoding = "0.3.3"
 
-getrandom = { version = "0.1.14", features = ["wasm-bindgen"] }
+getrandom = { version = "0.2", features = ["wasm-bindgen", "js"] }
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
