fix indent in github workflow (#900)
* fix indent in github workflow

* remove ci chmod

* try nightly and use 0.10.3 rust-wasm

* we actually need the alpha version of fvm_shared

* fix f4 by moving to v3.0.0 alpha fvm_shared lib

* rustfmt

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,6 @@ members = [
 # Tell `rustc` to optimize for small code size.
 opt-level = "s"
 overflow-checks = true
+
+# [patch.crates-io]
+# fvm_shared = { version = "2.0.0", git = "https://github.com/filecoin-project/ref-fvm", tag = "fvm@v3.0.0-alpha.24" }
