--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -134,10 +134,10 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: true
-      - name: Install latest stable
+      - name: Install latest nightly
         uses: actions-rs/toolchain@v1
         with:
-          toolchain: stable
+          toolchain: nightly
           override: true
       - run: cargo --version
       - name: Restore/Save sscache
@@ -147,13 +147,10 @@ jobs:
             ~/.cache/sccache
           key: ${{ runner.os }}-${{ github.run_id }}-${{ needs.configure.outputs.datetime }}
       - run: |
-        sudo add-apt-repository ppa:mozillateam/ppa
-        sudo apt-get update && sudo apt-get install -y firefox-esr libnss3
+          sudo add-apt-repository ppa:mozillateam/ppa
+          sudo apt-get update && sudo apt-get install -y firefox-esr libnss3
       - run: npm install -g yalc
       - run: make install_wasmpack SILENT=true
-      - run: |
-          chown -R root:root /github/home
-          chown -R root:root /home/github
       # Disabling Chrome (only Firefox) due to  https://github.com/Zondax/filecoin-signing-tools/issues/68
       - run: make test_npm_unit
       - run: make test_npm_node
