--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -86,6 +86,7 @@ jobs:
 
   rust_publish:
     needs: [ build ]
+    if: startsWith("filecoin_signer@")
     runs-on: ubuntu-latest
     container:
       image: zondax/rust-ci:latest
@@ -101,6 +102,7 @@ jobs:
             ~/.cache/sccache
           key: ${{ runner.os }}-${{ github.run_id }}-${{ needs.configure.outputs.datetime }}
       - name: Cargo publish
-        run: cargo publish
+        run: |
+          cargo publish -p filecoin-signer --allow-dirty
         env:
            CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
