--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -47,7 +47,7 @@ jobs:
 
   publish_npm_package:
     needs: [ build ]
-    if: startsWith("npm")
+    if: startsWith(github.event.release.tag_name, 'npm')
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -85,7 +85,7 @@ jobs:
 
   rust_publish:
     needs: [ build ]
-    if: startsWith("rust")
+    if: startsWith(github.event.release.tag_name, 'rust')
     runs-on: ubuntu-latest
     container:
       image: zondax/rust-ci:latest
