fix: publish still failing (#959)
* cat Cargo.toml to check substitution

* add --dry-run option

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -104,7 +104,9 @@ jobs:
         # version is inside the tag name e.g rust@v0.1.0 (and we don't want the v)
         run: |
           export TAG_NAME=${{ github.event.release.tag_name }}
+          cat signer/Cargo.toml
           sed -i "s/0.0.0/${TAG_NAME:6}/g" signer/Cargo.toml
-          cargo publish -p filecoin-signer --allow-dirty
+          cat signer/Cargo.toml
+          cargo publish -p filecoin-signer --dry-run --allow-dirty
         env:
            CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
