--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -106,7 +106,7 @@ jobs:
         run: |
           export TAG_NAME=rust@v0.10.1
           cat signer/Cargo.toml
-          sed -i "s/\"0.0.0\"/\"${TAG_NAME:6}\"/g" signer/Cargo.toml
+          sed -i "s/\"0.0.0\"/\"0.10.1\"/g" signer/Cargo.toml
           cat signer/Cargo.toml
           cargo publish -p filecoin-signer --dry-run --allow-dirty
         env:
