--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -107,9 +107,9 @@ jobs:
           export TAG_NAME=rust@v0.10.1
           ls signer/
           cat signer/Cargo.toml
-          echo ${TAG_NAME:6}
+          echo ${{TAG_NAME:6}}
           sed -i "s/\"0.0.0\"/\"0.10.1\"/g" signer/Cargo.toml
           cat signer/Cargo.toml
-          cargo publish -p filecoin-signer --dry-run --allow-dirty
+          cargo publish -p filecoin-signer --manifest-path signer/Cargo.toml --dry-run --allow-dirty
         env:
            CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
