--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -105,8 +105,8 @@ jobs:
         # version is inside the tag name e.g rust@v0.1.0 (and we don't want the v)
         run: |
           export TAG_NAME=rust@v0.10.1
-          echo ${TAG_NAME}
-          sed -i "s/\"0.0.0\"/\"0.10.1\"/g" signer/Cargo.toml
+          export VERSION=$(echo ${TAG_NAME} | cut -c 7-)
+          sed -i "s/\"0.0.0\"/\"${VERSION\"/g" signer/Cargo.toml
           cat signer/Cargo.toml
           cargo publish -p filecoin-signer --manifest-path signer/Cargo.toml --dry-run --allow-dirty
         env:
