--- a/signer/Cargo.toml
+++ b/signer/Cargo.toml
@@ -19,7 +19,7 @@ rayon = "1"
 bls-signatures = {version = "0.12.0", default-features = false, features = ["pairing"]}
 
 # Crypto related
-hex = { git = "https://github.com/Zondax/rust-hex", rev="6e35fb48999278c8c6c75b099baa4ea2a9d1d12b" }
+hex = "0.4.3"
 getrandom = "0.1.14"
 libsecp256k1 = "0.6"
 blake2b_simd = "0.5.10"
